# ore-infinium

./: CMakeLists.txt  CNAME  INSTALL  README.md  config.h.in  index.html  params.json
cmake_modules/: FindBox2D.cmake  FindFTGL.cmake  FindFreeImage.cmake  FindFreeType.cmake  FindGLEW.cmake  FindLibRocket.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  FindSDL_ttf.cmake  FindYamlCpp.cmake  Findenet.cmake
hooks/: pre-commit
release/linux/: startup.sh
src/: CMakeLists.txt  block.cpp  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  cloudsystem.cpp  collisionmap.cpp  collisionmap.h  compress.cpp  compress.h  debug.cpp  debug.h  entity.cpp  entity.h  fontmanager.cpp  fontmanager.h  game.cpp  game.h  globals.h  guirenderer.frag  guirenderer.vert  image.cpp  image.h  item.cpp  item.h  lighting.vert  lightrenderer.cpp  lightrenderer.frag  lightrenderer.h  lightrendererpassthrough.frag  lightrendererpassthrough.vert  main.cpp  packet.proto  physicsdebugrenderer.cpp  physicsdebugrenderer.frag  physicsdebugrenderer.h  physicsdebugrenderer.vert  player.cpp  (+36 more)
src/client/: client.cpp  client.h
src/client/gui/: chatdialog.cpp  chatdialog.h  debugmenu.cpp  debugmenu.h  debugsettings.cpp  debugsettings.h  decoratorspritesheet.cpp  decoratorspritesheet.h  decoratorspritesheetinstancer.cpp  decoratorspritesheetinstancer.h  gui.cpp  gui.h  mainmenu.cpp  mainmenu.h  optionsdialog.cpp  optionsdialog.h  quickbarmenu.cpp  quickbarmenu.h
src/client/gui/assets/: Minion-UI.xcf  barlessWindow.rml  chatDialog.rml  cursor.rml  debugMenu.rml  debugSettings.rml  escapeMenu.rml  gui.rcss  mainMenu.rml  mainMenuMultiplayer.rml  mainMenuMultiplayerHost.rml  mainMenuMultiplayerJoin.rml  mainMenuSingleplayer.rml  mainMenuSingleplayerCreate.rml  mainMenuSingleplayerLoad.rml  mainMenuSingleplayerNew.rml  mostlyTransparentWindow.rml  optionsDialog.rml  quickBarMenu.rml  window.rml
src/client/gui/core/: Shell.cpp  Shell.h  ShellFileInterface.cpp  ShellFileInterface.h  ShellOpenGL.h  ShellRenderInterfaceOpenGL.cpp  ShellRenderInterfaceOpenGL.h  SystemInterfaceSDL2.cpp  SystemInterfaceSDL2.h
src/client/gui/junk/: DragListener.cpp  DragListener.h  Inventory.cpp  Inventory.h  main.cpp
src/gui/: chatdialog.cpp  chatdialog.h  gui.cpp  gui.h  mainmenu.cpp  mainmenu.h  mainmenulistener.cpp  mainmenulistener.h  optionsdialog.cpp  optionsdialog.h
src/gui/assets/: Minion-UI.xcf  README  chatDialog.rml  cursor.rml  frame.rml  gui-orig.tga  gui.rcss  gui.tga  gui.xcf  invader.rcss  mainMenu.rml  optionsDialog.rml  test.rml  window.rml
src/gui/core/: Shell.h  ShellRenderInterfaceOpenGL.cpp  ShellRenderInterfaceOpenGL.h  SystemInterfaceSDL2.cpp  SystemInterfaceSDL2.h
src/network/: HOWTO  packet.cpp  packet.h
src/network/protobuf-compiled/: packet.pb.cc  packet.pb.h
src/network/protobuf-src/: chatmessagepacket.proto  packet.proto
src/server/: contactlistener.cpp  contactlistener.h  server.cpp  server.h
src/settings/: settings.cpp  settings.h
textures/: bitmask guide.xcf  characters.xcf  characters.yaml  copper.xcf  dirt.xcf  entities.xcf  entities.yaml  null.xcf  stone.xcf  tilemap alpha mask.xcf  tiles.xcf  torch light.xcf
